The color of the input field is changed

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   background-color: transparent;
   border: none;
   border-radius: 10px;
-  color: #fff;
+  color: grey;
   padding: 1rem;
   font-size: 1rem;
   box-shadow: 6px 10px 50px -6px rgba(133, 223, 237, 1);
