--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: grey;
+  color: rgb(90, 86, 86);
   font-family: 'Inter Tight', sans-serif;
   font-family: 'Quicksand', sans-serif;
   font-family: 'Titillium Web', sans-serif;
