--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   font-family: 'Inter Tight', sans-serif;
   font-family: 'Quicksand', sans-serif;
   font-family: 'Titillium Web', sans-serif;
+  background-color: azure;
   
 }
 h1{
